--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,29 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyB7vhWw9y6HroTQMe52qmA5nr1ZPHc1fJU",
+    authDomain: "ds-hrm.firebaseapp.com",
+    projectId: "ds-hrm",
+    storageBucket: "ds-hrm.appspot.com",
+    messagingSenderId: "691654779202",
+    appId: "1:691654779202:web:22f37182680ce92ee9a8db",
+    measurementId: "G-DGBP89LKZB"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
